API-290: GET/applications should return all application data (#613)
* API-290 Eliminated ApplicationSearchResult component and now returning ApplicationResponse in ApplicationSearchResults. Modified both openapi.yaml and the applications.py class.
